syntax = "proto3";

package auth;
option go_package = "proto/auth;authpb";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  uint64 id = 1;
  string username = 2;
  string email = 3;
}
